# workspace

./: .gitignore  Cargo.toml  README.md  SCHEMA.md  TODO  bacon.toml  build.rs  build.sh  config.toml  env.sh  test.json
data/office/: aoch.toml  aodh.toml  aold.toml  cmoap.toml  cmoar.toml  cmoas.toml  cmobr.toml  cmocg.toml  cmodl.toml  cmoga.toml  cmogj.toml  cmohp.toml  cmohr.toml  cmojh.toml  cmojk.toml  cmoka.toml  cmokl.toml  cmomh.toml  cmoml.toml  cmomn.toml  cmomp.toml  cmomz.toml  cmonl.toml  cmood.toml  cmopb.toml  cmopy.toml  cmorj.toml  cmosk.toml  cmotg.toml  cmotn.toml  cmotr.toml  cmouk.toml  cmoup.toml  cmowb.toml  comap.toml  comar.toml  comas.toml  combr.toml  comcg.toml  comdl.toml  (+334 more)
data/person/: aasanm.toml  abdulsp.toml  abdulwm.toml  acharyad.toml  adiyaman.toml  ajaykb.toml  alizabea.toml  ambethks.toml  ambethvc.toml  amirdhav.toml  amits.toml  ammanka.toml  amudhap.toml  amudhaps.toml  amulktk.toml  amuluv.toml  anandamv.toml  anandbcv.toml  anandhis.toml  anandibp.toml  anandmsm.toml  anbalag.toml  anbalakp.toml  anbaratm.toml  anbilmp.toml  anitharr.toml  annadurk.toml  anniyurs.toml  appavum.toml  aravinrs.toml  arifmk.toml  arjunanp.toml  arulr.toml  arumugav.toml  aruna.toml  arunkprg.toml  arunmoza.toml  arvindk.toml  ashimkg.toml  ashokang.toml  (+334 more)
scratch/: office-schema.json  person-schema.json  queries.sql  separate-schemas.json
scripts/: env.sh
sql/: library.sql  schema.sql  write.sql
src/: augment.rs  build.rs  context.rs  data.rs  dto.rs  export.rs  graph.rs  import.rs  main.rs  render.rs  search.rs
src/data/: indexer.rs  mod.rs  searcher.rs
src/ingest/: mod.rs  old.rs  prompt.txt
src/record/: mod.rs  sqlitebe.rs  tests.rs
src/repo/: backend.rs  mod.rs  serve.rs  sqlitebe.rs  test_backend.rs  tests.rs
src/repo/mst/: mod.rs  tests.rs
src/repo/sync/: client.rs  server.rs
src/serve/: mod.rs
src/serve/handler/: mod.rs
src/serve/handler/entity/: contact.rs  mod.rs  name.rs  photo.rs
src/serve/handler/office/: mod.rs  supervisor.rs
src/serve/handler/person/: mod.rs  tenure.rs
static/: search.db  style.css
templates/: base.html  changes.html  config.toml  dynamic.html  entity.html  index.html  macros.html  office.html  page.html  person.html  person_edit.html  uncommitted.html
templates/entity/contact/: add_partial.html  edit_partial.html  view_partial.html
templates/entity/name/: edit_partial.html  view_partial.html
templates/entity/photo/: view_partial.html
templates/office/supervisor/: add_partial.html  view_partial.html
templates/person/tenure/: add_partial.html  edit_partial.html  view_partial.html
tool/: Cargo.toml
tool/src/: context.rs  data.rs  dto.rs  export.rs  import.rs  index.rs  main.rs  render.rs  repo.rs  repository.rs
xform/: Cargo.toml  LICENSE  bacon.toml  config.toml  schema.json
xform/schema/: entity.sql  property.sql
xform/sql/: library.sql  schema.sql
xform/src/: augment.rs  context.rs  data.rs  dto.rs  export.rs  graph.rs  import.rs  ingest.rs  main.rs  render.rs  repo.rs  schema.sql
xform/src/ingest/: derive.rs  gemini.rs  json.rs  mod.rs  old.rs  stdin.rs
xform/src/repo/mst/: mod.rs  tests.rs
xform/src/serve/: handler.rs  mod.rs
xform/src/serve/handler/: filters.rs  mod.rs  office.rs  person.rs
xform/src/serve/handler/entity/: contact.rs  mod.rs  name.rs  photo.rs
xform/src/serve/handler/office/: mod.rs  supervisor.rs
xform/src/serve/handler/person/: mod.rs  tenure.rs
xform/templates/: base.html  edit.html  edit_entity.html  entity.html  macros.html  office.html  person.html  person_edit.html
xform/templates/entity/: edit.html  new.html
xform/templates/entity/contact/: view_partial.html
xform/templates/entity/photo/: edit_partial.html  view_partial.html
xform/templates/office/supervisor/: view_partial.html
xform/templates/person/tenure/: view_partial.html
