[package]
name = "xform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
serde_variant = "0.1.3"
serde_with = "3.14.0"
tera = "1.20.0"
toml = { version = "0.9.5", features = ["serde"] }

