[package]
name = "xform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serialize", "chrono"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
serde_variant = "0.1.3"
serde_with = "3.14.0"
tera = "1.20.0"
toml = { version = "0.9.5", features = ["serde"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
wikibase = "0.7.5"
md5 = "0.7.0"
gemini-rust = "1.3.1"
schemars = "1.0.4"
axum = { version = "0.8.4", features = ["macros"] }
async-trait = "0.1.89"
regex = "1.11.2"
tower-http = { version = "0.6.6", features = ["fs"] }
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
thiserror = "2.0.17"
displaydoc = "0.2.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
include-sqlite-sql = "0.2.2"
tower-livereload = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
blake3 = "1.8.2"
